# rgmc_cloud_robotics_2026

./: .gitignore  README.md  pyproject.toml
config/base-camera-calibration/: camera-params-cr01.yaml  camera-params-cr02.yaml  camera-params-cr03.yaml  camera-params-cr04.yaml  camera-params-cr05.yaml  camera-params-cr06.yaml  camera-params-cr07.yaml  camera-params-cr08.yaml  camera-params-cr10.yaml  camera-params-cr11.yaml  camera-params-cr12.yaml  camera-params-cr13.yaml  camera-params-cr14.yaml  camera-params-cr15.yaml  camera-params-cr17.yaml  camera-params-cr21.yaml  camera-params-cr22.yaml  camera-params-cr23.yaml  camera-params-cr24.yaml  camera-params-cr25.yaml  camera-params-cr26.yaml  camera-params-cr27.yaml  camera-params-cr28.yaml  camera-params-cr29.yaml  camera-params-cr30.yaml  camera-params-cr32.yaml
models/: T.stl  circle_base.stl  circle_base_icra_comp.stl  cube.stl  cylnder.stl  square_base.stl  square_base_icra_comp.stl
src/: calib_fisheye_cam.py  cloudgripper_iou_calculator.py  main.py  shapes.py
src/rgmc_cloud_robotics_2026/: __init__.py  calib_fisheye_cam.py  pushing_task_iou_calculator.py  shapes.py
